1、重新更新demo架构和布局 2、修复android硬解码问题

--- a/demo-android/app/src/main/res/values/arrays.xml
+++ b/demo-android/app/src/main/res/values/arrays.xml
@@ -2,30 +2,30 @@
 <resources>
     <!--功能-->
     <string-array name="test_items">
-        <item name="pcm2aac">pcm2aac</item>
-        <item name="doResample">doResample</item>
-        <item name="doResampleAVFrame">doResampleAVFrame</item>
-        <item name="doScale">doScale</item>
-        <item name="doDemuxer">doDemuxer</item>
-        <item name="doMuxerTwoFile">doMuxerTwoFile</item>
-        <item name="doReMuxer">doReMuxer</item>
-        <item name="audio_doDecode">audio_doDecode</item>
-        <item name="audio_doDecode2">audio_doDecode2</item>
-        <item name="video_doEncode">video_doEncode</item>
-        <item name="video_doDecode">video_doDecode</item>
-        <item name="doReMuxerWithStream">doReMuxerWithStream</item>
-        <item name="doExtensionTranscode">doExtensionTranscode</item>
-        <item name="doTranscode">doTranscode</item>
-        <item name="doEncodeMuxer">doEncodeMuxer</item>
-        <item name="doCut">doCut</item>
-        <item name="MergeTwo">MergeTwo</item>
-        <item name="MergeFiles">MergeFiles</item>
-        <item name="addMusic">addMusic</item>
-        <item name="doJpgGet">doJpgGet</item>
-        <item name="doJpgToVideo">doJpgToVideo</item>
-        <item name="doChangeAudioVolume">doChangeAudioVolume</item>
-        <item name="doChangeAudioVolume2">doChangeAudioVolume2</item>
-        <item name="doVideoScale">doVideoScale</item>
+        <item name="pcm2aac">pcm2aac 0</item>
+        <item name="doResample">doResample 1</item>
+        <item name="doResampleAVFrame">doResampleAVFrame 2</item>
+        <item name="doScale">doScale 3</item>
+        <item name="doDemuxer">doDemuxer 4 </item>
+        <item name="doMuxerTwoFile">doMuxerTwoFile 5</item>
+        <item name="audio_doDecode">audio_doDecode 6</item>
+        <item name="audio_doDecode2">audio_doDecode2 7</item>
+        <item name="video_doEncode">video_doEncode 8</item>
+        <item name="video_doHardDecode">video_doHardDecode 9</item>
+        <item name="video_doHardEncode">video_doHardEncode 10</item>
+        <item name="doReMuxerWithStream">doReMuxerWithStream 11</item>
+        <item name="doExtensionTranscode">doExtensionTranscode 12</item>
+        <item name="doTranscode">doTranscode 13</item>
+        <item name="doEncodeMuxer">doEncodeMuxer 14</item>
+        <item name="doCut">doCut 15</item>
+        <item name="MergeTwo">MergeTwo 16</item>
+        <item name="MergeFiles">MergeFiles 17</item>
+        <item name="addMusic">addMusic 18</item>
+        <item name="doJpgGet">doJpgGet 19</item>
+        <item name="doJpgToVideo">doJpgToVideo 20</item>
+        <item name="doChangeAudioVolume">doChangeAudioVolume 21</item>
+        <item name="doChangeAudioVolume2">doChangeAudioVolume2 22</item>
+        <item name="doVideoScale">doVideoScale 23</item>
     </string-array>
 
 </resources>
