完善android平台全部例子测试

--- a/demo-android/app/src/main/res/values/arrays.xml
+++ b/demo-android/app/src/main/res/values/arrays.xml
@@ -8,24 +8,25 @@
         <item name="doScale">doScale 3</item>
         <item name="doDemuxer">doDemuxer 4 </item>
         <item name="doMuxerTwoFile">doMuxerTwoFile 5</item>
-        <item name="audio_doDecode">audio_doDecode 6</item>
-        <item name="audio_doDecode2">audio_doDecode2 7</item>
-        <item name="video_doEncode">video_doEncode 8</item>
-        <item name="video_doHardDecode">video_doHardDecode 9</item>
-        <item name="video_doHardEncode">video_doHardEncode 10</item>
-        <item name="doReMuxerWithStream">doReMuxerWithStream 11</item>
-        <item name="doExtensionTranscode">doExtensionTranscode 12</item>
-        <item name="doTranscode">doTranscode 13</item>
-        <item name="doEncodeMuxer">doEncodeMuxer 14</item>
-        <item name="doCut">doCut 15</item>
-        <item name="MergeTwo">MergeTwo 16</item>
-        <item name="MergeFiles">MergeFiles 17</item>
-        <item name="addMusic">addMusic 18</item>
-        <item name="doJpgGet">doJpgGet 19</item>
-        <item name="doJpgToVideo">doJpgToVideo 20</item>
-        <item name="doChangeAudioVolume">doChangeAudioVolume 21</item>
-        <item name="doChangeAudioVolume2">doChangeAudioVolume2 22</item>
-        <item name="doVideoScale">doVideoScale 23</item>
+        <item name="doReMuxer">doReMuxer 6</item>
+        <item name="doSoftDecode">doSoftDecode 7</item>
+        <item name="doSoftDecode2">doSoftDecode2 8</item>
+        <item name="doSoftEncode">doSoftEncode 9</item>
+        <item name="video_doHardDecode">video_doHardDecode 10</item>
+        <item name="video_doHardEncode">video_doHardEncode 11</item>
+        <item name="doReMuxerWithStream">doReMuxerWithStream 12</item>
+        <item name="doExtensionTranscode">doExtensionTranscode 13</item>
+        <item name="doTranscode">doTranscode 14</item>
+        <item name="doEncodeMuxer">doEncodeMuxer 15</item>
+        <item name="doCut">doCut 16</item>
+        <item name="MergeTwo">MergeTwo 17</item>
+        <item name="MergeFiles">MergeFiles 18</item>
+        <item name="addMusic">addMusic 19</item>
+        <item name="doJpgGet">doJpgGet 20</item>
+        <item name="doJpgToVideo">doJpgToVideo 21</item>
+        <item name="doChangeAudioVolume">doChangeAudioVolume 22</item>
+        <item name="doChangeAudioVolume2">doChangeAudioVolume2 23</item>
+        <item name="doVideoScale">doVideoScale 24</item>
     </string-array>
 
 </resources>
